--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bignumber.js": "^9.0.1",
     "bip39-light": "^1.0.7",
     "bootstrap": "^5.0.2",
+    "cors": "^2.8.5",
     "crypto-browserify": "^3.12.0",
     "gatsby": "^3.9.1",
     "gatsby-plugin-alias-imports": "^1.0.5",
@@ -60,8 +61,8 @@
     "react-redux": "^7.2.4",
     "react-tilty": "^2.0.3",
     "redux-saga": "^1.1.3",
-    "sharethis-reactjs": "^1.6.0",
     "sass": "1.52.3",
+    "sharethis-reactjs": "^1.6.0",
     "store": "^2.0.12",
     "stream-browserify": "^3.0.0"
   }
